--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RPS</title>
-</head>
-<body>
-    
-</body>
-<script src="./script.js"></script>
+  </head>
+  <body>
+    <div id="container">
+      <button id="rock">Rock</button>
+      <button id="paper">Paper</button>
+      <button id="scissors">Scissors</button>
+    </div>
+    <div id="game-display"></div>
+    <div id="score">
+        <p id="human-score">Human Score: 0</p>
+        <p id="computer-score">Compuer Score: 0</p>
+    </div>
+  </body>
+  <script src="./script.js"></script>
 </html>
